GlyphScriptCompiler.IntegrationTests/TestData/SyntaxErrorExamples/invalidRead.gs
ЁЯФв x
тМия╕П x тЮХ 5
